force-app/main/default/objects/fboost__B_SchedulerJob__c/fboost__B_SchedulerJob__c.object-meta.xml
<CustomObject>
    <description>Boost Scheduler Job execution logs</description>
    <label>Boost Scheduler Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boost Scheduler Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>