force-app/main/default/objects/fboost__B_SchedulerJob__c/fields/fboost__ExecutionInterval__c.field-meta.xml
<CustomField>
    <fullName>fboost__ExecutionInterval__c</fullName>
    <description>Determines process execution interval.</description>
    <externalId>true</externalId>
    <label>Execution Interval</label>
    <length>8</length>
    <type>Text</type>
</CustomField>