force-app/main/default/objects/fboost__B_SchedulerJob__c/fields/fboost__HandlerClass__c.field-meta.xml
<CustomField>
    <fullName>fboost__HandlerClass__c</fullName>
    <description>Determines handler class</description>
    <label>Handler Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>