force-app/main/default/objects/fboost__B_SchedulerJob__c/fields/fboost__LastExecutionTime__c.field-meta.xml
<CustomField>
    <fullName>fboost__LastExecutionTime__c</fullName>
    <description>Determines the last Execution Time</description>
    <label>Last Execution Time</label>
    <type>DateTime</type>
</CustomField>