force-app/main/default/objects/fboost__B_SchedulerJob__c/fields/fboost__NextExecutionTime__c.field-meta.xml
<CustomField>
    <fullName>fboost__NextExecutionTime__c</fullName>
    <description>Determines Next Execution Time</description>
    <label>Next Execution Time</label>
    <type>DateTime</type>
</CustomField>