force-app/main/default/objects/fboost__B_SchedulerJob__c/fields/fboost__NumberOfAttempts__c.field-meta.xml
<CustomField>
    <fullName>fboost__NumberOfAttempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Determines the number of Scheduler tries of processing. Can be different then value of Number Of Executions field because of shoudRun return value.</description>
    <label>Number Of Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>