force-app/main/default/objects/fboost__B_SchedulerJob__c/fields/fboost__NumberOfExecutions__c.field-meta.xml
<CustomField>
    <fullName>fboost__NumberOfExecutions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Executions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>