force-app/main/default/objects/fboost__B_SchedulerJob__c/fields/fboost__Order__c.field-meta.xml
<CustomField>
    <fullName>fboost__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>