force-app/main/default/objects/fboost__B_SchedulerJob__c/fields/fboost__ProcessName__c.field-meta.xml
<CustomField>
    <fullName>fboost__ProcessName__c</fullName>
    <description>The name of the Scheduler Job configuration</description>
    <externalId>true</externalId>
    <inlineHelpText>The name of the Scheduler Job configuration</inlineHelpText>
    <label>Process Name</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>