force-app/main/default/objects/fboost__B_SchedulerJob__c/fields/fboost__Status__c.field-meta.xml
<CustomField>
    <fullName>fboost__Status__c</fullName>
    <formula>IF((NOW() - fboost__NextExecutionTime__c) &gt; 1, &apos;Critical&apos;, 
			IF((NOW() - fboost__NextExecutionTime__c) &gt; (1060/1440), &apos;Delay 16-24h&apos;,
						IF((NOW() - fboost__NextExecutionTime__c) &gt; (480/1440), &apos;Delay 8-16h&apos;,
									IF((NOW() - fboost__NextExecutionTime__c) &gt; (240/1440), &apos;Delay 4-8h&apos;,
												IF((NOW() - fboost__NextExecutionTime__c) &gt; (120/1440), &apos;Delay 2-4h&apos;,
															IF((NOW() - fboost__NextExecutionTime__c) &gt; (60/1440), &apos;Delay 1-2h&apos;, 
																		&apos;OK&apos;))))))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>