force-app/main/default/objects/fboost__B_SchedulerJob__c/fields/fboost__WorkerId__c.field-meta.xml
<CustomField>
    <fullName>fboost__WorkerId__c</fullName>
    <description>Determines worker thread id which was processing described job last time.</description>
    <label>Worker Id</label>
    <length>16</length>
    <type>Text</type>
</CustomField>