force-app/main/default/objects/fboost__B_SchedulerJob__c/listViews/fboost__All.listView-meta.xml
<ListView>
    <fullName>fboost__All</fullName>
    <columns>fboost__Order__c</columns>
    <columns>NAME</columns>
    <columns>fboost__ProcessName__c</columns>
    <columns>fboost__ExecutionInterval__c</columns>
    <columns>fboost__LastExecutionTime__c</columns>
    <columns>fboost__NextExecutionTime__c</columns>
    <columns>fboost__NumberOfAttempts__c</columns>
    <columns>fboost__NumberOfExecutions__c</columns>
    <columns>fboost__Status__c</columns>
    <columns>fboost__HandlerClass__c</columns>
    <columns>fboost__WorkerId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>